HelloUltraviolet/Fixtures/RejectedSource/Modules/MissingImport/Source/Main.uv
//! Rejected import declaration specimen for an unresolved module path.

import DefinitelyMissing::Module
